@@ -151,6 +151,7 @@
         <string id="33312">DVD-chapters could not be read</string>  
         <string id="33313">Problem with generated audio-tracklist</string> 
         <string id="33314">Problem with generated subtitle-tracklist</string>    
-        <string id="33315">Licence-key for makemkv expired</string>      
+        <string id="33315">Licence-key for makemkv expired</string>  
+        <string id="33316">Configured ssh-user is not current user</string>     
 
  </strings>
